deploy/infra/db.tf
resource "aws_db_subnet_group" "managrdb" {
  name       = "managrdb"
  subnet_ids = aws_subnet.private.*.id

  tags = {
    "app" = "managr"
  }
}

resource "aws_db_instance" "managrdb" {
  for_each                   = { for e in var.environments : e.name => e }
  identifier                 = "${replace(each.value.rds_instance_name, "_", "-")}-${each.value.name}"
  allocated_storage          = 100
  engine                     = "postgres"
  engine_version             = "12.19"
  instance_class             = "db.r5.xlarge"
  name                       = each.value.rds_db_name
  username                   = each.value.rds_username
  password                   = each.value.rds_password
  storage_type               = "io1"
  iops                       = 1000
  skip_final_snapshot        = true
  port                       = 5432
  db_subnet_group_name       = aws_db_subnet_group.managrdb.id
  vpc_security_group_ids     = [aws_security_group.managr_db.id]
  publicly_accessible        = false
  auto_minor_version_upgrade = false
  snapshot_identifier        = each.value.rds_db_snapshot_id
  storage_encrypted          = each.value.name == "prod" ? true : false
  kms_key_id                 = each.value.name == "prod" ? "arn:aws:kms:us-east-1:986523545926:key/36627a8d-ff13-4f18-a735-450f5ac59609" : ""
  
  //lifecycle {
  //  ignore_changes = [
  //    "snapshot_identifier",
  //  ]
//}


  tags = {
    "app" = "managr"
  }
}
